# fraud_detection_5

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  fraud_detection.db
.cargo/: config.toml
.specify/memory/: constitution.md
crates/consumer/: Cargo.toml
crates/consumer/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/fraud_detection/: Cargo.toml
crates/fraud_detection/src/: bench_main.rs  main.rs  main_sqlite.rs
crates/fraud_detection/src/adapters/: bench_model.rs  bench_storage.rs  concurrent_buffer.rs  concurrent_buffer2.rs  demo_model.rs  demo_modelizer.rs  in_memory_buffer.rs  in_memory_buffer2.rs  in_memory_storage.rs  log_alarm.rs  mod.rs  sqlite_storage.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/modelizer/: Cargo.toml
crates/modelizer/src/: lib.rs
crates/producer/: Cargo.toml
crates/producer/src/: lib.rs
specs/001-producer-transactions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-producer-transactions/checklists/: architecture.md  requirements.md
specs/001-producer-transactions/contracts/: buffer1-trait.md
specs/002-consumer-transactions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-consumer-transactions/checklists/: error-propagation.md  full-spec-audit.md  ports-adapters.md  requirements.md
specs/003-modelizer-inference/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-modelizer-inference/checklists/: requirements.md  review.md
specs/004-concurrent-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-concurrent-pipeline/checklists/: concurrency.md  requirements.md
specs/005-logger-transactions/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-logger-transactions/checklists/: pre-impl.md  requirements.md
