[package]
name    = "fraud_detection"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fraud_detection"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
domain     = { path = "../domain" }
producer   = { path = "../producer" }
consumer   = { path = "../consumer" }
anyhow     = { workspace = true }
env_logger = { workspace = true }
log        = { workspace = true }
tokio      = { workspace = true }
uuid       = { workspace = true }
