[package]
name    = "fraud_detection"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fraud_detection"
path = "src/main.rs"

[[bin]]
name = "fraud_detection_sqlite"
path = "src/main_sqlite.rs"

[[bin]]
name = "fraud_detection_bench"
path = "src/bench_main.rs"

[lints]
workspace = true

[dependencies]
domain     = { path = "../domain" }
producer   = { path = "../producer" }
consumer   = { path = "../consumer" }
modelizer  = { path = "../modelizer" }
logger     = { workspace = true }
anyhow     = { workspace = true }
env_logger = { workspace = true }
log        = { workspace = true }
rand       = { workspace = true }
sqlx       = { workspace = true }
tokio      = { workspace = true }
uuid       = { workspace = true }
