[package]
name    = "logger"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
domain    = { path = "../domain" }
thiserror = { workspace = true }
tracing   = { workspace = true }
rand      = { workspace = true }
tokio     = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
